# PlausiDen-Salesman

./: .gitignore  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FOSS_AUDIT.md  HANDOFF.md  HUMAN_IN_THE_LOOP.md  LICENSE  OWNER_BLOCKERS.md  PLAN.md  README.md  ROADMAP.md  SALESMAN_TODO.md  SCOPE.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
crates/salesman-api/: Cargo.toml
crates/salesman-api/src/: handlers.rs  html.rs  lib.rs  main.rs  middleware.rs
crates/salesman-cli/: Cargo.toml
crates/salesman-cli/src/: main.rs
crates/salesman-competitor/: Cargo.toml
crates/salesman-competitor/src/: lib.rs
crates/salesman-content/: Cargo.toml
crates/salesman-content/src/: angle_picker.rs  case_study.rs  classify_reply.rs  comparison_page.rs  competitor_detect.rs  draft_email.rs  draft_reply.rs  extract_interests.rs  geo.rs  lib.rs  seo_meta.rs  site.rs
crates/salesman-content/tests/: template_voice.rs
crates/salesman-core/: Cargo.toml
crates/salesman-core/src/: email_match.rs  error.rs  header.rs  ids.rs  lib.rs  model.rs  redact.rs  reply_kind_props.rs  tool.rs  transition_props.rs
crates/salesman-detector/: Cargo.toml
crates/salesman-detector/src/: lib.rs
crates/salesman-detector/tests/: corpus_test.rs  draft_fixtures_test.rs
crates/salesman-detector/tests/corpus/: ai_001_cliche_opener.txt  ai_002_corporate_speak.txt  ai_003_em_dash_storm.txt  ai_004_delve_paradigm.txt  ai_005_not_just_x.txt  ai_006_circle_back.txt  ai_007_stakeholder_synergy.txt  ai_008_fake_empathy.txt  ai_009_tapestry_delve.txt  ai_010_double_hedge.txt  ai_011_recap_close.txt  ai_012_industry_leading.txt  ai_013_navigate_landscape.txt  ai_014_unleash_potential.txt  human_001_specific_reference.txt  human_002_brief_concrete.txt  human_003_question_only.txt  human_004_one_line.txt  human_005_technical_detail.txt  human_006_terse_referral.txt  human_007_disagreement.txt
crates/salesman-detector/tests/draft_fixtures/: draft_001_security_pivot.txt  draft_002_devtools_specific.txt  draft_003_compliance_anchor.txt  draft_004_followup.txt  draft_005_short_breakup.txt
crates/salesman-discovery/: Cargo.toml
crates/salesman-discovery/src/: brave_search.rs  csv_seed.rs  email_pattern.rs  homepage.rs  import_root.rs  lib.rs  locality.rs  team_scraper.rs  tools.rs
crates/salesman-llm/: Cargo.toml
crates/salesman-llm/src/: claude.rs  gemini.rs  lib.rs  rates.rs  router.rs  subscriber_cli.rs  types.rs
crates/salesman-orchestrator/: Cargo.toml
crates/salesman-orchestrator/src/: lib.rs
crates/salesman-osint/: Cargo.toml
crates/salesman-osint/src/: dns_info.rs  gdelt.rs  github_org.rs  hn.rs  lib.rs  wayback.rs  wikipedia.rs
crates/salesman-outreach/: Cargo.toml
crates/salesman-outreach/src/: bounce.rs  lib.rs  owner_notify.rs  unsubscribe.rs
crates/salesman-receipts/: Cargo.toml
crates/salesman-receipts/src/: lib.rs
crates/salesman-reply/: Cargo.toml
crates/salesman-reply/src/: auth_results.rs  config.rs  dsn.rs  lib.rs  parsed.rs  poller.rs
crates/salesman-state/: Cargo.toml
crates/salesman-state/migrations/: 0001_init.sql  0002_sequences.sql  0003_template_key.sql  0004_cost_cap.sql  0005_touch_provenance.sql  0006_reply_drafts.sql  0007_trigger_events.sql  0008_reply_tags.sql  0009_prospect_tags.sql  0010_owner_notifications.sql
crates/salesman-state/src/: lib.rs  query.rs
crates/salesman-state/tests/: integration.rs
crates/salesman-tools/: Cargo.toml
crates/salesman-tools/src/: lib.rs
deploy/systemd/: README.md  salesman-api.service  salesman-audit-chain.service  salesman-audit-chain.timer  salesman-classify.service  salesman-classify.timer  salesman-daily.service  salesman-daily.timer  salesman-doctor-watch.service  salesman-doctor-watch.timer  salesman-inbox-poll.service  salesman-inbox-poll.timer
docs/: AB_TESTING.md  AUDIT_CHAIN.md  BRAND_VOICE.md  COLLABORATION.md  DEPLOYMENT_GUIDE.md  EMAIL_DELIVERABILITY.md  MODEL_RESILIENCE.md  OPERATOR_HANDBOOK.md  OUTREACH_INFRA_HANDOFF.md  PII_REDACTION_BOUNDARY.md  PRODUCT_VISION.md  SUBSCRIBER_LOGIN.md  TELEMETRY.md
docs/architecture/: README.md  funnel-state-machine.mmd  pipeline.mmd  touch-lifecycle.mmd
docs/comparisons/: atrium-vs-bleachbit.md  sentinel-vs-crowdstrike-falcon.md  tidy-vs-ccleaner.md
docs/decisions/: 0000-template.md  0001-rust-only.md  0002-postgres-not-sqlite.md  0003-claude-and-gemini-not-lfi-yet.md  0004-owner-in-the-loop-default.md  0005-key-only-vps-access.md  0006-audit-chain-v2-full-receipt-signing.md
drafts/: email_pitch_v1.md  email_to_william.txt  email_to_william_v2.txt  email_to_william_v3.txt
integrations/: avp.toml
samples/: README.md  competitors.toml  meeting-slots.toml  objections.toml  operator-brief.md  pricing.toml  products.toml  prospects-warmup-template.csv  salesman.env.example
scripts/: check.sh  deploy.sh  salesman-daily.sh  salesman-doctor-watch.sh  send_pitch.sh
sequences/: v1-3touch.toml  v2-security-segment.toml  v3-value-add-only.toml
static/: robots.txt
templates/cold/: breakup.toml  follow_up_1.toml  follow_up_1_security.toml  follow_up_2.toml  introduction.toml  introduction_b.toml  introduction_data.toml  introduction_dev.toml  introduction_devops.toml  introduction_security.toml  referral_ask.toml  value_add.toml
vertical/realestate/: README.md
vertical/realestate/samples/: competitors.toml  objections.toml  operator-brief.md  products.toml
vertical/realestate/templates/cold/: buyer_intro.toml  seller_intro.toml  sphere_followup.toml
