[workspace]
resolver = "2"
members = [
    "crates/salesman-core",
    "crates/salesman-state",
    "crates/salesman-llm",
    "crates/salesman-tools",
    "crates/salesman-discovery",
    "crates/salesman-osint",
    "crates/salesman-competitor",
    "crates/salesman-content",
    "crates/salesman-outreach",
    "crates/salesman-reply",
    "crates/salesman-orchestrator",
    "crates/salesman-cli",
    "crates/salesman-api",
    "crates/salesman-detector",
    "crates/salesman-receipts",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["PlausiDen <thepictishbeast@github>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/thepictishbeast/PlausiDen-Salesman"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "signal"] }
async-trait = "0.1"
futures = "0.3"

# error + tracing
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# crypto / safety
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"

# http + client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli"] }
axum = { version = "0.7", features = ["macros", "json", "tokio"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip"] }

# db
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "chrono", "json", "macros", "migrate"] }
redis = { version = "0.27", features = ["tokio-comp", "aio"] }

# mail
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
async-imap = "0.10"

# cli
clap = { version = "4", features = ["derive", "env"] }

# config
figment = { version = "0.10", features = ["toml", "env"] }

# llm clients (we vendor / wrap minimal HTTP, no SaaS-SDK lock-in)
# (no direct dep; salesman-llm builds its own thin HTTP wrappers via reqwest)

# misc
once_cell = "1"
parking_lot = "0.12"
itertools = "0.13"
strum = { version = "0.26", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
