[package]
name = "salesman-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "salesman"
path = "src/main.rs"

[dependencies]
salesman-core = { path = "../salesman-core" }
salesman-llm = { path = "../salesman-llm" }
salesman-tools = { path = "../salesman-tools" }
salesman-orchestrator = { path = "../salesman-orchestrator" }
salesman-state = { path = "../salesman-state" }
salesman-discovery = { path = "../salesman-discovery" }
salesman-content = { path = "../salesman-content" }
salesman-outreach = { path = "../salesman-outreach" }
salesman-receipts = { path = "../salesman-receipts" }
salesman-detector = { path = "../salesman-detector" }
salesman-reply = { path = "../salesman-reply" }
salesman-osint = { path = "../salesman-osint" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
dialoguer = { workspace = true }
chrono = { workspace = true }
