[package]
name = "salesman-content"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
salesman-core = { path = "../salesman-core" }
salesman-llm = { path = "../salesman-llm" }
salesman-tools = { path = "../salesman-tools" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
