[package]
name = "salesman-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
proptest = "1"
