[package]
name = "salesman-detector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
salesman-core = { path = "../salesman-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
