[package]
name = "salesman-discovery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
salesman-core = { path = "../salesman-core" }
salesman-tools = { path = "../salesman-tools" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
csv = "1.3"
# 0.27 updates `selectors`, which drops the unmaintained fxhash
# (RUSTSEC-2025-0057). Discovery only uses the stable core API
# (Html::parse_document / Selector::parse / .select / .text).
scraper = "0.27"
zeroize = { workspace = true }
