[package]
name = "salesman-outreach"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
salesman-core = { path = "../salesman-core" }
salesman-receipts = { path = "../salesman-receipts" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
chrono = { workspace = true }
lettre = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
proptest = "1"
